--- a/app.css
+++ b/app.css
@@ -122,3 +122,17 @@ html {
   background-color: #269aff;
   color: white;
 }
+
+@media (min-width: 900px) {
+  .panel {
+    flex-direction: row;
+  }
+  .pricing-plan {
+    border-right: 1px solid #e1f1ff;
+    border-bottom: none;
+    padding: 25px 50px;
+  }
+  .pricing-plan:last-child {
+    border-right: none;
+  }
+}
